--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ opt-level = 3      # controls the `--opt-level` the compiler builds with.
 [dependencies]
 regex = "1"
 lazy_static = "1.2"
+num = "0.2.0"
